<resources>
    <string name="app_name">Kitty day</string>
    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="breeds">Breeds</string>
    <string name="public_images">Public Images</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">favorite</string>
    <string name="upload_images">upload images</string>
    <string name="search_hint">Search for Breed</string>
    <string name="upload">Upload</string>
    <string name="upload_error">An Error occurred while upload image</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="sample_admob_id">ca-app-pub-3940256099942544~3347511713</string>
</resources>
